fix: update favicon and title

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "piano-visualisation",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://kud8.github.io/piano-visualisation",
   "dependencies": {
     "opensheetmusicdisplay": "^0.6.6",
     "react": "^16.6.3",
@@ -14,7 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -26,6 +28,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "jest": "^23.6.0"
   }
 }
